...
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <CheckBox
        android:id="@+id/has_covid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
...
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:text="Have you come in contact with a person with COVID recently?"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
...
