...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:text="Your buildings are highlighted below."
            />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tooltip2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp"
        />
...
