<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/yucky"
    tools:context="usc.covider.cs310.MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/overlay"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
    >
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="USC Covider"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:foregroundTint="@color/white"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="40dp"
        android:hint="Email: "
        android:textSize="25sp"
        />
    <EditText
        android:id="@+id/password"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:foregroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:layout_marginHorizontal="80dp"
        android:hint="Password: "
        android:layout_marginTop="40dp"
        android:textSize="25sp"
        />
    <EditText
        android:id="@+id/confirmpass"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:foregroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:layout_marginHorizontal="80dp"
        android:hint="Confirm Password:"
        android:layout_marginTop="40dp"
        android:textSize="25sp"
        />
    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign up"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:textSize="30sp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        app:layout_constraintTop_toBottomOf="@id/confirmpass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        app:layout_constraintTop_toBottomOf="@id/signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:textColor="@color/blue"
        android:textSize="30sp"
        />
    <TextView
        android:text="Blah Blah"
        android:id="@+id/error_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/confirmpass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>


