...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        />
    <CheckBox
        android:id="@+id/fertitta_hall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fertitta Hall"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/question"
        app:layout_constraintStart_toStartOf="parent"
...
